--- a/tests.html
+++ b/tests.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Telepath -- Mocha Tests</title>
+<title>Gulf -- Mocha Tests</title>
 <link rel="stylesheet" href="node_modules/mocha/mocha.css" />
 <script src="node_modules/mocha/mocha.js"></script>
 <script src="node_modules/expect.js/expect.js"></script>
@@ -11,7 +11,7 @@ mocha.setup('bdd')
 </script>
 <script src="test/tests.js"></script>
 </head>
-<body></body>
+<body>
 <div id='mocha'>
 </div>
 </body>
